--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "core-js": "^3.22.4"
   }
 }
